--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-	"name": "videogular",
-	"version": "1.0.0",
-	"dependencies": {},
-	"devDependencies": {
-		"gulp": "^3.8.8",
-		"gulp-uglify": "^1.1.0"
-	},
-	"engines": {
-		"node": ">=0.8.0"
-	},
-	"scripts": {
-		"test": "grunt test"
-	}
+  "name": "videogular",
+  "version": "1.0.0",
+  "dependencies": {},
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-uglify": "^1.1.0",
+    "gulp-rename": "^1.2.0"
+  },
+  "engines": {
+    "node": ">=0.8.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  }
 }
